--- a/package.json
+++ b/package.json
@@ -37,7 +37,11 @@
     "@coreui/utils": "^1.3.1",
     "@coreui/vue": "^3.2.9",
     "@coreui/vue-chartjs": "^1.0.6",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
+    "bootstrap-vue": "^2.21.2",
     "vue": "~2.6.12",
+    "vue-axios": "^3.2.5",
     "vue-router": "^3.5.1",
     "vuex": "~3.6.2"
   },
